# uni

./: .gitignore  CLAUDE.md  README.md  flake.nix  lab-1.pl  syntax.md
.obsidian/: app.json  community-plugins.json
databases/database_lab8/: CMakeLists.txt  compile.bat  setup_roles.sql
databases/pgcli/: README.md  pyproject.toml
databases/pgcli/lab-1/: 01.sql  02.sql  03.sql  04.sql  05.sql  06.sql  07.sql  08.sql  09.sql  10.sql  11.sql  12.sql  README.md
databases/pgcli/lab-2/: README.md
databases/pgcli/lab-3/: 01_schema_update.sql  02_demonstration.sql  README.md
databases/pgcli/lab-4/: 00_seed_data.sql  01.sql  02.sql  03.sql  04.sql  05.sql  06.sql  07.sql  08.sql  09.sql  10.sql  README.md
databases/pgcli/lab-5/: 01_procedure.sql  02_demonstration.sql  README.md
databases/pgcli/lab-6/: 01_baseline.sql  02_optimizations.sql  03_results.sql  README.md
databases/pgcli/lab-7/: README.md  app.py
databases/pgcli/lab-8/: 01_improvements.sql  02_demonstration.sql  README.md  app.py
digital-circuits/: cd-lab-2-2(1).cnf  cd-lab-2-2(2).cnf  cd-lab-2-2-1.cnf  cd-lab-2-2-1.fit  cd-lab-2-2-1.gdf  cd-lab-2-2-1.hif  cd-lab-2-2-1.inc  cd-lab-2-2-1.mmf  cd-lab-2-2-1.ndb  cd-lab-2-2-1.pin  cd-lab-2-2-1.pof  cd-lab-2-2-1.rpt  cd-lab-2-2-1.scf  cd-lab-2-2-1.snf  cd-lab-2-2-1.sym  cd-lab-2-2-2.cnf  cd-lab-2-2-2.fit  cd-lab-2-2-2.gdf  cd-lab-2-2-2.hif  cd-lab-2-2-2.mmf  cd-lab-2-2-2.ndb  cd-lab-2-2-2.pin  cd-lab-2-2-2.pof  cd-lab-2-2-2.rpt  cd-lab-2-2-2.snf  cd-lab-2-2-2.sym  cd-lab-2-2.cnf  cd-lab-2-2.fit  cd-lab-2-2.gdf  cd-lab-2-2.hif  cd-lab-2-2.mmf  cd-lab-2-2.ndb  cd-lab-2-2.pin  cd-lab-2-2.pof  cd-lab-2-2.rpt  cd-lab-2-2.scf  cd-lab-2-2.snf  cd-lab-2.cnf  cd-lab-2.fit  cd-lab-2.gdf  (+11 more)
electronics/: Дополнительная информация.md  Лаба 3.md  Лаба 4.md  Экзамен по Электротехнике.md
human-machine-interface/: Итоговый доклад QuestHabit.md
information-theory/otik-lab-3/: CMakeLists.txt  L3.1.cpp  L3.2.md  L3.3.cpp  L3.3sp.cpp  README.md  test.bat
information-theory/otik-lab-3/tdir/: a.txt
internet-programming/: Лаба 4 Запуск.md  Лаба 5.md  Лаба 6.md
logic-programming/: README.md
math-logic/: README.md
microprocessor-systems/: .gitignore  ARCHITECTURE_GUIDE.md  README.md  THEORY.md
os-and-networks/: .gitignore
otik/: Exam.md  lab-2.md  lab-5.md
parallel-programming/: answers exam.md  answers labs.md  lab-1 chat.md  lab-2 CshCpp XMM.md  lab-3 SumMatAVX.md  lab-4 SAWAmmm.md  lab-4.md  lab-5 WinFormLab5.md  lab-5.md  lab-6 AMM.md  lab-6.md  lab-7 1111.md  lab-7.md  template.md
software-architecture/: esse-nix-patterns.md
software-architecture/lab-4/: CMakeLists.txt  Makefile  README.md  README_OLD.md
software-architecture/lab-4/assets/: Nature.xpm  TestImage.xpm
software-architecture/lab-4/include/: Canvas.h  CanvasWidget.h  IGraphic.h  Image.h  ImageProxy.h  RealImage.h
software-architecture/lab-4/src/: Canvas.cpp  CanvasWidget.cpp  ImageProxy.cpp  RealImage.cpp  main.cpp
(+635 files in other folders)
